add lightweight support for JidePopup
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@254 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/pom.xml
+++ b/pom.xml
@@ -53,13 +53,13 @@
             <url>${m2-repo.java.net.url}</url>
         </repository>
     </distributionManagement>
-    <!--<dependencies>-->
-    <!--<dependency>-->
-    <!--<groupId>aqua</groupId>-->
-    <!--<artifactId>aqua</artifactId>-->
-    <!--<version>5.0</version>-->
-    <!--<scope>system</scope>-->
-    <!--<systemPath>${basedir}/libs/laf.jar</systemPath>-->
-    <!--</dependency>-->
-    <!--</dependencies>-->
+    <dependencies>
+        <dependency>
+            <groupId>aqua</groupId>
+            <artifactId>aqua</artifactId>
+            <version>5.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/libs/laf.jar</systemPath>
+        </dependency>
+    </dependencies>
 </project>
