--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jidesoft</groupId>
     <artifactId>jide-oss</artifactId>
-    <version>2.1.3.03</version>
+    <version>2.1.3.04</version>
     <packaging>jar</packaging>
     <name>JIDE Common Layer</name>
     <url>https://jide-oss.dev.java.net</url>
@@ -40,6 +40,10 @@
                     <source>1.5</source>
                     <target>1.5</target>
                 </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-source-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
