add source and javadoc to pom
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@538 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,23 @@
             </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
