--- a/src/com/jidesoft/plaf/basic/folderChooser.properties
+++ b/src/com/jidesoft/plaf/basic/folderChooser.properties
@@ -12,4 +12,5 @@ FolderChooser.toolbar.home=Jump to Home
 FolderChooser.toolbar.mydocuments=Jump to My Documents
 FolderChooser.toolbar.delete=Delete the selected folder
 FolderChooser.toolbar.new=Create a new folder under the selected folder
-FolderChooser.toolbar.recent=Recent: 
+FolderChooser.toolbar.recent=Recent:
+FolderChooser.navigationPanel.go=Go 
