--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@
 # USER DEFINED VALUES
 #
 company_name=JIDE Software, Inc.
-jide_version=2.3.1
+jide_version=2.3.2-pre
 base_dir=.
 output_dir=${basedir}/classes
 
