Fixed refresh button's tooltip is wrong Added F5 key to the tree view in FolderChooser to trigger refresh 31381
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@830 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/src/com/jidesoft/plaf/basic/folderChooser.properties
+++ b/src/com/jidesoft/plaf/basic/folderChooser.properties
@@ -12,4 +12,5 @@ FolderChooser.toolbar.home=Jump to Home
 FolderChooser.toolbar.mydocuments=Jump to My Documents
 FolderChooser.toolbar.delete=Delete the selected folder
 FolderChooser.toolbar.new=Create a new folder under the selected folder
-FolderChooser.toolbar.recent=Recent: 
+FolderChooser.toolbar.refresh=Refresh the folder view to reflect external folder changes 
+FolderChooser.toolbar.recent=Recent:
