--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.jidesoft</groupId>
     <artifactId>jide-oss</artifactId>
     <name>JIDE Common Layer</name>
-    <version>2.4.3</version>
+    <version>2.4.4</version>
     <description>JIDE Common Layer (Professional Swing Components)</description>
     <url>https://jide-oss.dev.java.net</url>
     <licenses>
@@ -66,15 +66,24 @@
             </plugin>
         </plugins>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>aqua</groupId>
-            <artifactId>aqua</artifactId>
-            <version>5.0</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/libs/laf.jar</systemPath>
-        </dependency>
-    </dependencies>
+    <profiles>
+        <profile>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>aqua</groupId>
+                    <artifactId>aqua</artifactId>
+                    <version>5.0</version>
+                    <scope>system</scope>
+                    <systemPath>${basedir}/libs/laf.jar</systemPath>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
     <distributionManagement>
         <repository>
             <id>local-repository</id>
