Change the alert message learning from Windows
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@989 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/src/com/jidesoft/plaf/basic/folderChooser.properties
+++ b/src/com/jidesoft/plaf/basic/folderChooser.properties
@@ -5,8 +5,8 @@ FolderChooser.new.title=Create New Folder
 FolderChooser.new.folderName=Enter the name of the new folder:
 FolderChooser.delete.title=Confirm Folder Deletion
 FolderChooser.delete.header=Really delete selected folders?
-FolderChooser.delete.message1=Do you really want to delete this folder and all child folders?
-FolderChooser.delete.message2=Do you really want to delete these {0} folders and all child folders?
+FolderChooser.delete.message1=Are you sure you want to permanently delete this folder?
+FolderChooser.delete.message2=Are you sure you want to permanently delete these {0} items?
 FolderChooser.toolbar.desktop=Jump to the Desktop
 FolderChooser.toolbar.home=Jump to Home
 FolderChooser.toolbar.mydocuments=Jump to My Documents
