--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@
 # USER DEFINED VALUES
 #
 company_name=JIDE Software, Inc.
-jide_version=2.6.8-pre
+jide_version=2.7.0
 base_dir=.
 output_dir=${basedir}/classes
 
