--- a/src/com/jidesoft/plaf/basic/basic.properties
+++ b/src/com/jidesoft/plaf/basic/basic.properties
@@ -53,6 +53,8 @@ Undo.dragging=Dragging
 Undo.hide=Hide
 Undo.toggle=Toggle Floating/Docking Mode
 Undo.toggleAutohide=Toggle Autohidden/Docking Mode
+Undo.maximize=Maximize
+Undo.restore=Restore
 Undo.resizing=Resizing
 Undo.moving=Moving
 
