Range classes now have a copy constructor and AbstractRange class has a copy() method
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1594 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="JIDE_${jideversion}" default="dist">
+<project name="JIDE_${jide_version}" default="dist">
 
     <!-- Default configuration and properties for script execution. If does not exist then uses ${basedir}/CM_build.properties. -->
     <property file="${basedir}/build.properties"/>
