git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1668 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         </license>
     </licenses>
     <scm>
-        <connection>https://jide-oss.dev.java.net/svn/jide-oss/trunk</connection>
-        <url>https://jide-oss.dev.java.net/svn/jide-oss/trunk</url>
+        <connection>https://svn.java.net/svn/jide-oss~svn/trunk</connection>
+        <url>https://svn.java.net/svn/jide-oss~svn/trunk</url>
     </scm>
     <build>
         <sourceDirectory>src</sourceDirectory>
