Grids,E,RolloverTableUtils,Added HyperlinkTableCellEditorRenderer and RolloverTableUtils to implement hyperlink feature in JTable,,no
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1827 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.jidesoft</groupId>
     <artifactId>jide-oss</artifactId>
     <name>JIDE Common Layer</name>
-    <version>3.1.1</version>
+    <version>3.2-pre</version>
     <description>JIDE Common Layer (Professional Swing Components)</description>
     <url>https://jide-oss.dev.java.net</url>
     <licenses>
@@ -67,8 +67,11 @@
         </plugins>
     </build>
     <profiles>
-        <profile><id>aqua</id>
-            <activation><activeByDefault>true</activeByDefault></activation>
+        <profile>
+            <id>aqua</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <dependencies>
                 <dependency>
                     <groupId>aqua_ui</groupId>
