remove plastic_lnf_1.3 and just use plastic_lnf add src-lnf module to 3rd party L&Fs
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@1848 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     </licenses>
     <scm>
         <connection>https://svn.java.net/svn/jide-oss~svn/trunk</connection>
+        <developerConnection>scm:svn:https://svn.java.net/svn/jide-oss~svn/trunk</developerConnection>
         <url>https://svn.java.net/svn/jide-oss~svn/trunk</url>
     </scm>
     <build>
