Grids,B,ButtonPopupPanel,Fixed so that ButtonPopupPanel will get the ok/cancel text from UIDefaults respecting the component's locale,64210,no
git-svn-id: https://svn.java.net/svn/jide-oss~svn/trunk@2108 8ffc590b-27e5-ea7f-97f6-895640bc1b3e

--- a/src/com/jidesoft/dialog/buttons.properties
+++ b/src/com/jidesoft/dialog/buttons.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=OK
+
+Button.cancel=Cancel
+
+Button.yes=Yes
+
+Button.no=No
+
 Button.apply=Apply
 Button.apply.mnemonic=A
 
