--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0"?>
+<!--
+  ~ @(#)pom.xml 5/16/2012
+  ~
+  ~ Copyright 2002 - 2012 JIDE Software Inc. All rights reserved.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -132,12 +138,12 @@
             </build>
         </profile>
     </profiles>
-    <!--distributionManagement>
+    <distributionManagement>
 	<repository>
 	    <id>sonatype-nexus-staging</id>
 	    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
 	</repository>
-    </distributionManagement-->
+    </distributionManagement>
     <scm>
         <connection>scm:git:git://github.com/jidesoft/jide-oss.git</connection>
         <developerConnection>scm:git:https://jidesoft@github.com/jidesoft/jide-oss.git</developerConnection>
