--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jidesoft</groupId>
     <artifactId>jide-oss</artifactId>
     <name>JIDE Common Layer</name>
     <version>3.3.7</version>
+    <packaging>jar</packaging>
     <description>JIDE Common Layer (Professional Swing Components)</description>
-    <url>https://jide-oss.dev.java.net</url>
+    <url>https://github.com/jidesoft/jide-oss</url>
     <licenses>
         <license>
             <name>GPL with classpath exception</name>
@@ -19,11 +25,13 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-    <scm>
-        <connection>https://svn.java.net/svn/jide-oss~svn/trunk</connection>
-        <developerConnection>scm:svn:https://svn.java.net/svn/jide-oss~svn/trunk</developerConnection>
-        <url>https://svn.java.net/svn/jide-oss~svn/trunk</url>
-    </scm>
+    <developers>
+    	<developer>
+	     <id>jidesoft</id>
+	     <name>jidesoft</name>
+	     <email>support@jidesoft.com</email>
+	</developer>
+    </developers>
     <build>
         <sourceDirectory>src</sourceDirectory>
         <resources>
@@ -66,35 +74,73 @@
                 </executions>
             </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+		<artifactId>wagon-ssh</artifactId>
+               	<version>2.0</version>
+            </extension>
+        </extensions>
     </build>
     <profiles>
         <profile>
             <id>aqua</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
+		<property>
+		    <name>performRelease</name>
+		    <value>true</value>
+		</property>
             </activation>
             <dependencies>
                 <dependency>
                     <groupId>aqua_ui</groupId>
                     <artifactId>ui</artifactId>
                     <version>5.0</version>
-                    <scope>system</scope>
-                    <systemPath>${basedir}/libs/ui.jar</systemPath>
+		    <scope>system</scope>
+		    <systemPath>${basedir}/libs/ui.jar</systemPath>
                 </dependency>
                 <dependency>
                     <groupId>aqua_ui</groupId>
                     <artifactId>jrs</artifactId>
                     <version>5.0</version>
-                    <scope>system</scope>
-                    <systemPath>${basedir}/libs/JavaRuntimeSupport.jar</systemPath>
+		    <scope>system</scope>
+		    <systemPath>${basedir}/libs/ui.jar</systemPath>
                 </dependency>
             </dependencies>
+	    <properties>
+		<gpg.keyname>06F100B6</gpg.keyname>
+		<release.username>jidesoft</release.username>
+	    </properties>
+	    <build>
+	    	<plugins>
+		    <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-gpg-plugin</artifactId>
+			<version>1.0-alpha-4</version>
+			<executions>
+			    <execution>
+				<id>sign-artifacts</id>
+				<phase>verify</phase>
+				<goals>
+				    <goal>sign</goal>
+				</goals>
+		 	    </execution>
+			</executions>
+	  	    </plugin>
+		</plugins>
+	    </build>
         </profile>
     </profiles>
     <distributionManagement>
-        <repository>
-            <id>local-repository</id>
-            <url>${m2-repo.java.net.url}</url>
-        </repository>
+	<repository>
+	    <id>sonatype-nexus-staging</id>
+	    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+	</repository>
     </distributionManagement>
+    <scm>
+    	<connection>scm:git:git://github.com/jidesoft/jide-oss.git</connection>
+	<developerConnection>scm:git:https://jidesoft@github.com/jidesoft/jide-oss.git</developerConnection>
+	<url>https://github.com/jidesoft/jide-oss</url>
+    </scm>
 </project>
