--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
                     <artifactId>jrs</artifactId>
                     <version>5.0</version>
 		    <scope>system</scope>
-		    <systemPath>${basedir}/libs/ui.jar</systemPath>
+		    <systemPath>${basedir}/libs/JavaRuntimeSupport.jar</systemPath>
                 </dependency>
             </dependencies>
 	    <properties>
