--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
   ~ Copyright 2002 - 2012 JIDE Software Inc. All rights reserved.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
@@ -15,7 +16,7 @@
     <groupId>com.jidesoft</groupId>
     <artifactId>jide-oss</artifactId>
     <name>JIDE Common Layer</name>
-    <version>3.4.2</version>
+    <version>3.4.3</version>
     <packaging>jar</packaging>
     <description>JIDE Common Layer (Professional Swing Components)</description>
     <url>https://github.com/jidesoft/jide-oss</url>
@@ -139,10 +140,10 @@
         </profile>
     </profiles>
     <distributionManagement>
-	<repository>
-	    <id>sonatype-nexus-staging</id>
-	    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-	</repository>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
     </distributionManagement>
     <scm>
         <connection>scm:git:git://github.com/jidesoft/jide-oss.git</connection>
