Editor,E,CodeEditorSearchable,Added CodeEditorSearchable#setWholeWords() to support whole words only searching,70464,no

--- a/src/com/jidesoft/swing/swing.properties
+++ b/src/com/jidesoft/swing/swing.properties
@@ -20,6 +20,8 @@ SearchableBar.highlights.mnemonic=H
 SearchableBar.highlights.tooltip=Highlights all occurrences of the phrase
 SearchableBar.matchCase=Match Case
 SearchableBar.matchCase.mnemonic=M
+SearchableBar.wholeWords=Whole Words
+SearchableBar.wholeWords.mnemonic=W
 SearchableBar.repeats=Repeats
 SearchableBar.repeats.mnemonic=R
 
