French translation, 72194, no

--- a/src/com/jidesoft/swing/swing.properties
+++ b/src/com/jidesoft/swing/swing.properties
@@ -30,7 +30,7 @@ SearchableBar.reachedTop=Reached top of the page
 SearchableBar.reachedBottomRepeat=Reached bottom of the page, continued from top
 SearchableBar.reachedTopRepeat=Reached top of the page, continued from bottom
 SearchableBar.notFound=Phrase not found
-SearchableBar.matches=Matches
+SearchableBar.matches=Match(es)
 
 #
 # CheckBoxList
