--- a/src/com/jidesoft/converter/converter.properties
+++ b/src/com/jidesoft/converter/converter.properties
@@ -17,3 +17,6 @@ Font.boldItalic=BoldItalic
 #
 Quarter.quarter=Qtr {0}
 #Please note, there is a space at the end of Qtr.
+
+Range.range={0} - {1}
+Range.multiple=(Multiple)
