--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <groupId>com.jidesoft</groupId>
     <artifactId>jide-oss</artifactId>
     <name>JIDE Common Layer</name>
-    <version>3.7.1</version>
+    <version>3.7.2</version>
     <packaging>jar</packaging>
     <description>JIDE Common Layer (Professional Swing Components)</description>
     <url>https://github.com/jidesoft/jide-oss</url>
@@ -40,7 +40,7 @@
         </developer>
     </developers>
     <build>
-        <sourceDirectory>src</sourceDirectory>
+        <sourceDirectory>src,src-jdk6</sourceDirectory>
         <resources>
             <resource>
                 <directory>src</directory>
